# sweather

./: .env.example  .gitignore  Cargo.toml  README.md
sweather/: Cargo.toml
sweather/src/: main.rs
weatherstack/: Cargo.toml
weatherstack/src/: lib.rs
weatherstack/src/blocking/: mod.rs
